fix: copy icon color more visible

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -58,8 +58,9 @@
 
 .copyIcon {
   font-size: 1.3rem;
-  opacity: 0.6;
+  opacity: 1;
   line-height: 1;
+  color: var(--ifm-color-primary);
 }
 
 .cta {
